# index-atomspace

./: CMakeLists.txt  README.md  complex-query.scm  data.scm  data2.scm  main.py  query.scm  semantic.scm  test_pm.scm
index/: CMakeLists.txt  example1.cpp  example1.h  index.cxx  index.h  indexlink.cpp  indexlink.h  myimplicator.cpp  myimplicator.h  mystorage.cpp  mystorage.h  storage.h
